infra/platform-system/dex/app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex-external
  namespace: platform-system
  labels:
    external-dns.edgard.org/scope: external
spec:
  parentRefs:
  - name: external
    namespace: platform-system
    sectionName: https
  hostnames:
  - id.edgard.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: dex
      port: 5556
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex-internal
  namespace: platform-system
  labels:
    external-dns.edgard.org/scope: internal
spec:
  parentRefs:
  - name: internal
    namespace: platform-system
    sectionName: https
  hostnames:
  - id.edgard.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: dex
      port: 5556
